src/components/ViewPosts/ViewPosts.scss
@import '../../App.scss';

#viewPosts {
    height: 100vh;
    width: 100vw;
    @include flexCenter(column);
    position: absolute;
    top: 0;
    left: 0;
    z-index: 5;
    opacity: .9;

    @media screen and (max-width: $break-tablet) {
        align-items: flex-end;
        overflow-y: auto;
    }

    #viewPostsContainer {
        padding: 30px;
        width: 80%;
        height: 80%;
        background-color: #fff;
        overflow-y: auto;
        z-index: 10;
        border-radius: 2px;
        box-shadow: 0px 0px 4px 4px #c0c0c0;
        color: $brand-color-dark;
        position: relative;
        @include flexCenter(column);
        justify-content: flex-start;
        align-items: center;

        @media screen and (max-width: $break-tablet) {
            padding: 5px;
            padding-top: 15px;
        }

        #close {
            position: absolute;
            top: 15px;
            left: 15px;
            width: fit-content;

            @media screen and (max-width: $break-tablet) {
                top: 3px;
                left: 3px;
            }
        }

        #viewPostsTitle {
            @include flexSpaceBetween(row);
            width: 90%;
            min-height: 50%;
            // height: fit-content;
            font-family: $header-font;
            padding: 10px;
            box-shadow: 0px 0px 4px 4px #d1d1d1;

            @media screen and (max-width: $break-tablet) {
                min-height: 95%;
                flex-direction: column;
                margin: 10px 0;
                padding: 10px;
                justify-content: flex-start;
            }

            #countryMapView {
                height: 100%;
                width: 50%;
                border-radius: 2px;

                @media screen and (max-width: $break-tablet) {
                    width: 100%;
                    margin-bottom: 20px;
                    height: 100%;
                }
            }

            &>div {
                width: 50%;
                height: 100%;
                @include flexSpaceAround(column);

                @media screen and (max-width: $break-tablet) {
                    width: 100%;
                }

                h1 {
                    font-size: 4em;
                    line-height: 1.4;
                    display: flex;
                    align-items: center;
                    justify-content: center;

                    img {
                        max-height: 1em;
                        box-shadow: 0px 0px 2px 2px #d3d3d3;
                        margin-right: 10px;
                    }

                    @media screen and (max-width: $break-tablet) {
                        font-size: 2em;
                    }
                }

                &>div {
                    height: 50%;
                    width: 100%;
                    @include flexSpaceBetween(column);

                    @media screen and (max-width: $break-tablet) {
                        font-size: .9em;
                    }
                }
            }


        }

        #postContent {
            margin: 20px 0 10px 0;
            padding: 10px;
            border: 1px solid $brand-color;
            border-radius: 2px;
            box-shadow: 0px 0px 3px 3px #e9e9e9;
            width: 90%;

            #postProfilePic {
                max-height: 80px;
                width: auto;
                border-radius: 50%;
            }

            h2 {
                font-size: 1.4em;
                margin: 5px 0 10px 0;
            }

            h4 {
                font-size: 1em;
                margin-bottom: 10px;
            }

            #description {
                text-align: left;
                margin-bottom: 10px;

                h3 {
                    font-size: 1em;
                    color: $brand-color;
                }

                p {
                    font-size: .9em;
                    margin: 5px 0;
                }
            }

            #editDelete {
                @include flexSpaceAround(row);
                justify-content: flex-end;

                i {
                    width: fit-content;
                    margin: 5px;
                }

            }

            * {
                width: 100%;
            }
        }


        #backToMap {
            width: 20%;
        }

        // * {
        //     width: 100%;
        // }
    }
}

